tests/NormalTests/paczka1/small_fuzzy/64308267.err
Error in line 6: zl2Uc4HOKiR A342 333,7
Error in line 7: zl2Uc4HOKiR S355 92,5
Error in line 14: VXPr A475 14,2
